ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
      kubernetes.io/ingress.class: nginx
  namespace: default
  name: nodeapp-ingress
spec:
  rules:
  - host: nodeapp.test
    http:
      paths:
      - path: /
        backend:
          serviceName: nodeapp
          servicePort: 8080
